@@ -51,6 +51,8 @@ ToDo/Notes:
 	- Report unrepresentable inodes during ntfs_readdir() as KERN_WARNING
 	  messages and include the inode number.  Thanks to Yura Pakhuchiy for
 	  pointing this out.
+	- Change ntfs_rl_truncate_nolock() to throw away the runlist if the new
+	  length is zero.
 
 2.1.23 - Implement extension of resident files and make writing safe as well as
 	 many bug fixes, cleanups, and enhancements...
